created search img app

--- a/SearchImg/index.html
+++ b/SearchImg/index.html
@@ -9,13 +9,13 @@
 <body>
     <div class="container">
         <h1>Search Images</h1>
-
+        
         <div class="Inputs">
             <input type="text" placeholder="Search for Image" id="textInput">
             <button id="searchBtn" class="btn">Search</button>
         </div>
-
-        <div class="output"></div>
+        
+        <div id="output"></div>
         <button id="loadMore" class="btn" style="display: none;">Want more?</button>
 
 
