--- a/LandingPage/index.html
+++ b/LandingPage/index.html
@@ -1,36 +1,98 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Sundown-studio</title>
+    <link rel="shortcut icon" href="./android-chrome-192x192.png" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.css"
+    />
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <div id="main">
-        <div id="page1">
-            <nav>
-                <img src="https://uploads-ssl.webflow.com/64d3dd9edfb41666c35b15b7/64d3dd9edfb41666c35b15c2_Sundown%20logo.svg" alt="">
-                <div id="nav-2">
-                    <h4><a href="">Work</a></h4>
-                    <h4><a href="">Studio</a></h4>
-                    <h4><a href="">Contact</a></h4>
-                </div>
-            </nav>
-            <div id="center">
-                <div id="left">
-                    <h3>Sundown is a multi-disciplinary studio focused on creating unique, end-to-end experiences and environments.</h3>
-                </div>
-                <div id="right">
-                    <h1>SPACES THAT INSPIRE</h1>
-                </div>
-            </div>
+      <div id="page1">
+        <nav>
+          <img
+            src="https://uploads-ssl.webflow.com/64d3dd9edfb41666c35b15b7/64d3dd9edfb41666c35b15c2_Sundown%20logo.svg"
+            alt=""
+          />
+          <div id="nav-2">
+            <h4><a href="">Work</a></h4>
+            <h4><a href="">Studio</a></h4>
+            <h4><a href="">Contact</a></h4>
+          </div>
+        </nav>
+        <div id="center">
+          <div id="left">
+            <h3>
+              Sundown is a multi-disciplinary studio focused on creating unique,
+              end-to-end experiences and environments.
+            </h3>
+          </div>
+          <div id="right">
+            <h1>
+              SPACES <br />
+              THAT <br />
+              INSPIRE
+            </h1>
+          </div>
+        </div>
+        <div id="hero-shape">
+          <div class="hero-1"></div>
+          <div class="hero-2"></div>
+          <div class="hero-3"></div>
+        </div>
+        <video src="./video.mp4" autoplay loop muted></video>
+      </div>
+
+      <div id="page2">
+        <div id="moving-text">
+          <div class="con">
+            <h1>EXPERIENCES</h1>
+            <div class="dot"></div>
+            <h1>ENVIROMENTS</h1>
+            <div class="dot"></div>
+            <h1>CONTENT</h1>
+            <div class="dot"></div>
+          </div>
+          <div class="con">
+            <h1>EXPERIENCES</h1>
+            <div class="dot"></div>
+            <h1>ENVIROMENTS</h1>
+            <div class="dot"></div>
+            <h1>CONTENT</h1>
+            <div class="dot"></div>
+          </div>
+          <div class="con">
+            <h1>EXPERIENCES</h1>
+            <div class="dot"></div>
+            <h1>ENVIROMENTS</h1>
+            <div class="dot"></div>
+            <h1>CONTENT</h1>
+            <div class="dot"></div>
+          </div>
+        </div>
+      <div id="page2-bottom">
+        <h1>We are a group of design- driven, goal-focused creators, producers, and designers who believe that the details make all the difference.</h1>
+        <div id="bottom2">
+          <img src="https://uploads-ssl.webflow.com/64d3dd9edfb41666c35b15b7/64d3dd9edfb41666c35b15d1_Holding_thumb-p-500.jpg" alt="">
+          <p>We love to create, we love to solve, we love to collaborate, and we love to turn amazing ideas into reality. We’re here to partner with you through every step of the process and know that relationships are the most important things we build.</p>
+        </div>
+        <div id="gooey">
 
         </div>
+      </div>
     </div>
 
+    
+  </div>
 
-
+    <script src="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"></script>
     <script src="script.js"></script>
-</body>
+  </body>
 </html>
