--- a/pokemonTheme/index.html
+++ b/pokemonTheme/index.html
@@ -15,14 +15,15 @@
   </head>
   <body>
     <div class="container">
-      <img class="pokeImg" src="" alt="" />
+      <img class="pokeImg transition" src="./Img/wp9452365-pokemon-firered-and-leafgreen-wallpapers.jpg" alt="">
+      <audio class="audio" src=""></audio autoplay loop>
 
-      <div class="musicSelection">
+      <div class="musicSelection transition">
         <div class="controles">
           <button class="btn btn-left invert">
             <i class="fa-solid fa-arrow-left"></i>
           </button>
-          <h3 class="musicName">pokemon rgb song</h3>
+          <h3 class="musicName transition">change the theme</h3>
           <button class="btn btn-right invert">
             <i class="fa-solid fa-arrow-right"></i>
           </button>
